--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 
       <div class="project">
         <h2>Your Project?</h2>
-        <div class="project-description">
+        <div class="project-description" id="contact-p">
           <p>
             Thank you for visiting my portfolio. I am Cameron Smith, a dedicated
             full stack web developer with a passion for creating innovative solutions through
