--- a/case.html
+++ b/case.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Case Study - Michael Smith Portfolio</title>
-    <link rel="stylesheet" href="css/styles.production.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
@@ -42,11 +42,16 @@
     <div class="container" id="case-container" aria-labelledby="about">
       <h2>Case Study</h2>
       <div class="content" id="about">
+        <h2>From Concept to Code: Creating the myFlix Backend</h2>
+
+        <div class="chapter"><img src="img/heroImage.jpg" /></div>
+
         <h3>Introduction:</h3>
         <p>
           Among my earliest endeavors as a budding student of web development
-          stands the myFlix Backend. A journey of discovery where challenges
-          were met with determination, and triumphs celebrated with pride.
+          stands the myFlix Backend. My very first API and database
+          configuration. A journey of discovery where challenges were met with
+          determination, and triumphs celebrated with pride.
         </p>
 
         <h3>Chapter 1: The Spark of Innovation</h3>
@@ -60,7 +65,9 @@
           puzzle pieces fit together instead of learning one block at a time.
           That experience would soon prove extremely beneficial.
         </p>
-        <img src="img/spark.jpg" />
+        <a href="img/earlyAPI.png" target="_blank">
+          <img src="img/earlyAPI.png" alt="App Screenshot" />
+        </a>
 
         <h3>Chapter 2: Navigating Uncharted Territories</h3>
         <p>
@@ -94,7 +101,9 @@
           letter had been capitalized where it shouldn’t have been. After a
           laugh and a correction, everything was ready for production! …Right?
         </p>
-        <img src="img/error.jpg" />
+        <a href="img/authPOST.png" target="_blank">
+          <img src="img/authPOST.png" alt="App Screenshot" />
+        </a>
 
         <h3>Chapter 4: Safety First</h3>
         <p>
@@ -110,7 +119,15 @@
           bricks, my site was finally adhering to CORS policies, safe from
           threat, and at last read for production!
         </p>
-        <img src="img/design.jpg" />
+
+        <div class="chapter">
+          <a href="img/dbAuthPOST.png" target="_blank">
+            <img src="img/dbAuthPOST.png" alt="App Screenshot" />
+          </a>
+        </div>
+        <a href="img/bearerToken.png" target="_blank">
+          <img src="img/bearerToken.png" alt="App Screenshot" />
+        </a>
 
         <h3>Conclusion:</h3>
         <p>
@@ -126,6 +143,7 @@
         <img src="img/finished-Coding.jpg" />
       </div>
     </div>
+
     <div class="check-link">
       <a href="work.html">Check out some of my code.</a>
     </div>
