Swapped div positions

--- a/contact.html
+++ b/contact.html
@@ -39,15 +39,45 @@
     <!-- Main Content -->
     <div class="container" aria-labelledby="contact">
       <h2>Contact Me</h2>
+      <section id="contact" class="content">
+        <address>
+          <p>
+            Email:
+            <a href="mailto:cameron8325@gmail.com">cameron8325@gmail.com</a>
+          </p>
+          <p>Phone: (814) 924-3422</p>
+          <a href="img/Michael-Smith-Resume.pdf" download
+            >Download my resume!</a
+          >
+        </address>
+        <div class="social-links">
+          <p>Connect with me on:</p>
+          <ul>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/michael-smith-4b0252141/"
+                aria-label="LinkedIn"
+                >LinkedIn</a
+              >
+            </li>
+            <li>
+              <a href="https://github.com/Cameron8325" aria-label="GitHub"
+                >GitHub</a
+              >
+            </li>
+          </ul>
+        </div>
+      </section>
 
       <div class="project">
         <h2>Your Project?</h2>
         <div class="project-description" id="contact-p">
           <p>
             Thank you for visiting my portfolio. I am Cameron Smith, a dedicated
-            full stack web developer with a passion for creating innovative solutions through
-            out-of-the-box ingenuity. I am eager to connect with you and explore
-            how I can contribute to your projects and initiatives.
+            full stack web developer with a passion for creating innovative
+            solutions through out-of-the-box ingenuity. I am eager to connect
+            with you and explore how I can contribute to your projects and
+            initiatives.
           </p>
 
           <p>
@@ -100,44 +130,15 @@
         <div class="card-footer">
           <div class="project-info">
             <small
-              >Technologies Used: HTML, CSS, JavaScript, Typescript, Django, React and React Native, Angular, Relational and Non-Relational Databases(MongoDB, Postgres, mySQL, sqlite), and more! I always look forward to expanding my intellectual reach and meet every challenge with curiosity and an eager mind.</small
+              >Technologies Used: HTML, CSS, JavaScript, Typescript, Django,
+              React and React Native, Angular, Relational and Non-Relational
+              Databases(MongoDB, Postgres, mySQL, sqlite), and more! I always
+              look forward to expanding my intellectual reach and meet every
+              challenge with curiosity and an eager mind.</small
             >
-          </div>
-          <div class="project-buttons">
-            <a href="contact.html">Contact Me</a>
           </div>
         </div>
       </div>
-
-      <section id="contact" class="content">
-        <address>
-          <p>
-            Email:
-            <a href="mailto:cameron8325@gmail.com">cameron8325@gmail.com</a>
-          </p>
-          <p>Phone: (814) 924-3422</p>
-          <a href="img/Michael-Smith-Resume.pdf" download
-            >Download my resume!</a
-          >
-        </address>
-        <div class="social-links">
-          <p>Connect with me on:</p>
-          <ul>
-            <li>
-              <a
-                href="https://www.linkedin.com/in/michael-smith-4b0252141/"
-                aria-label="LinkedIn"
-                >LinkedIn</a
-              >
-            </li>
-            <li>
-              <a href="https://github.com/Cameron8325" aria-label="GitHub"
-                >GitHub</a
-              >
-            </li>
-          </ul>
-        </div>
-      </section>
 
       <!-- Contact Form -->
       <!-- <form class="contact-form" action="mailto:cameron8325@gmail.com" method="post" enctype="text/plain">
