Deleted unused images, changes chapter title.

--- a/case.html
+++ b/case.html
@@ -54,7 +54,7 @@
           determination, and triumphs celebrated with pride.
         </p>
 
-        <h3>Chapter 1: The Spark of Innovation</h3>
+        <h3>Chapter 1: New Beginnings</h3>
         <p>
           The objective was clear: to build a robust API that could handle a
           vast collection of movies and provide users with seamless access to
