Updated Case grammar

--- a/case.html
+++ b/case.html
@@ -46,20 +46,20 @@
 
         <div class="chapter"><img src="img/heroImage.jpg" /></div>
 
-        <h3>Introduction:</h3>
+        <h3>Overview:</h3>
         <p>
           Among my earliest endeavors as a budding student of web development
-          stands the myFlix Backend. My very first API and database
-          configuration. A journey of discovery where challenges were met with
-          determination, and triumphs celebrated with pride.
+          stands the myFlix Backend. It was my very first API and database
+          configuration—a journey of discovery where challenges were met with
+          determination, and triumphs were celebrated with pride.
         </p>
 
-        <h3>Chapter 1: New Beginnings</h3>
+        <h3>Purpose & Context:</h3>
         <p>
           The objective was clear: to build a robust API that could handle a
           vast collection of movies and provide users with seamless access to
-          movie details. This was my first real taste of full stack web
-          development, and as such I made sure to study the structure and flow
+          movie details. This was my first real taste of full-stack web
+          development, and as such, I made sure to study the structure and flow
           of the language. When I’ve taught myself a new language in the past,
           whether programming or foreign, I focused on understanding how the
           puzzle pieces fit together instead of learning one block at a time.
@@ -69,55 +69,56 @@
           <img src="img/earlyAPI.png" alt="App Screenshot" />
         </a>
 
-        <h3>Chapter 2: Navigating Uncharted Territories</h3>
+        <h3>Preparation:</h3>
         <p>
-          I started the journey simple: I wrote out which libraries,
-          middlewares, and database I wanted to use. I settled on Express,
-          MongoDB, Passport.js, and Morgan. I took some time to read the
-          documentation before I felt confident enough to set up my (first ever)
-          API index.js file. While importing the proper packages, I knew I would
-          need some sample data to test my endpoints with. After all, what good
-          is serving a request if there is nothing to serve? Whipping up an
-          array of movie objects flew by and before I knew it, I was ready to
-          start stitching together my first endpoint!
+          I started the journey simply: I wrote out which libraries, middleware,
+          and database I wanted to use. I settled on Express, MongoDB,
+          Passport.js, and Morgan. I took some time to read the documentation
+          before I felt confident enough to set up my (first-ever) API index.js
+          file. While importing the proper packages, I knew I would need some
+          sample data to test my endpoints with. After all, what good is serving
+          a request if there is nothing to serve? Whipping up an array of movie
+          objects flew by, and before I knew it, I was ready to start stitching
+          together my first endpoint!
         </p>
         <img src="img/explore.jpg" />
 
-        <h3>Chapter 3: The Dance of Error and Progress</h3>
+        <h3>Execution & Challenges:</h3>
         <p>
           Once the first endpoint was created, the rest was practice. I would
           take time to reflect on the functionality I wanted for my app,
           ensuring that I covered every base. I took a look at the console to
-          see if there were any errors, and to my surprise there were none! I
+          see if there were any errors, and to my surprise, there were none! I
           opened Postman to begin testing the endpoints with different headers
           and credentials. I was soon met with hurdles that felt like mountains
           at the time. One of the significant challenges was ensuring that the
           API endpoints had the proper syntax and followed the model properly.
           After consulting the vast wealth of knowledge known as Google and AI,
-          I decided I needed a second pair of eyes so I messaged my tutor. Maybe
-          I was too close to the project, maybe I had forgotten a dependency,
-          maybe his seasoned eyes could see something I was overlooking. Sure
-          enough, the problem was discovered, small but humbling nonetheless. A
-          letter had been capitalized where it shouldn’t have been. After a
-          laugh and a correction, everything was ready for production! …Right?
+          I decided I needed a second pair of eyes, so I messaged my tutor.
+          Maybe I was too close to the project, maybe I had forgotten a
+          dependency, maybe his seasoned eyes could see something I was
+          overlooking. Sure enough, the problem was discovered, small but
+          humbling nonetheless. A letter had been capitalized where it shouldn’t
+          have been. After a laugh and a correction, everything was ready for
+          production! …Right?
         </p>
         <a href="img/authPOST.png" target="_blank">
           <img src="img/authPOST.png" alt="App Screenshot" />
         </a>
 
-        <h3>Chapter 4: Safety First</h3>
+        <h3>Finalization:</h3>
         <p>
           Ok, so I may have been jumping the gun. One hurdle still remained in
-          my learning. The last, but certainly not least important part of web
+          my learning. The last, but certainly not least, important part of web
           development: Security. The “Who are you” and “What are you allowed to
           do” of an application, or in layman’s terms, Authentication and
-          Authorization. Not only did I need to add this detrimental aspect, but
-          I needed to persist the login so users wouldn’t be prompted to enter
-          their credentials for every new page. Luckily, there were tools
+          Authorization. Not only did I need to add this critical aspect, but I
+          also needed to persist the login so users wouldn’t be prompted to
+          enter their credentials for every new page. Luckily, there were tools
           available for such a task. These tools were staple names: bcrypt,
           passport, and express-validator. By implementing these proven building
-          bricks, my site was finally adhering to CORS policies, safe from
-          threat, and at last read for production!
+          blocks, my site was finally adhering to CORS policies, safe from
+          threat, and at last ready for production!
         </p>
 
         <div class="chapter">
@@ -131,14 +132,14 @@
 
         <h3>Conclusion:</h3>
         <p>
-          This project was a detrimental step for me as a student. Throughout
-          the ups and downs I faced, whether it be a miscased letter or new
-          syntax to learn, I remained hopeful. The experience above is something
-          I will always reflect on: the journey, the learning, and the help I
-          received. These aspects have become the foundation of which I will
-          approach and grow with all future projects. I’m ever curious where
-          my(or your) next project will take me, I look forward to meeting it
-          with an open mind and innovative solutions.
+          This project was a critical step for me as a student. Throughout the
+          ups and downs I faced, whether it be a miscased letter or new syntax
+          to learn, I remained hopeful. The experience is something I will
+          always reflect on: the journey, the learning, and the help I received.
+          These aspects have become the foundation on which I will approach and
+          grow with all future projects. I’m ever curious about where my (or
+          your) next project will take me. I look forward to meeting it with an
+          open mind and innovative solutions.
         </p>
         <img src="img/finished-Coding.jpg" />
       </div>
